[package]
name = "dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bytes = "1.9.0"
env_logger = "0.11.5"
gimli = "0.31.1"
libc = "0.2.167"
log = "0.4.22"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["ptrace", "process"] }
object = "0.36.5"
pest = "2.8.0"
pest_derive = "2.8.0"
serde_json = "1.0.140"
thiserror = "2.0.11"
typed-arena = "2.0.2"
