[package]
name = "dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
env_logger = "0.11.8"
gimli = "0.32.3"
libc = "0.2.177"
log = "0.4.28"
memmap2 = "0.9.8"
nix = { version = "0.30.1", features = ["ptrace", "process"] }
object = "0.37.3"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
typed-arena = "2.0.2"
